--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,15 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
+		<script>
+			const themeValue = localStorage.getItem("colorTheme");
+			const systemPreferredTheme = window.matchMedia("(prefers-color-scheme: dark)").matches
+				? "dark"
+				: "light";
+
+			document.body.classList.remove("light", "dark");
+			document.body.classList.add(themeValue ?? systemPreferredTheme);
+		</script>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
