--- a/src/app.html
+++ b/src/app.html
@@ -15,7 +15,7 @@
 			const systemPreferredTheme = window.matchMedia("(prefers-color-scheme: dark)").matches
 				? "dark"
 				: "light";
-
+			localStorage.setItem("colorTheme", themeValue ?? systemPreferredTheme);
 			document.body.classList.remove("light", "dark");
 			document.body.classList.add(themeValue ?? systemPreferredTheme);
 		</script>
